--- a/style.css
+++ b/style.css
@@ -76,6 +76,8 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    z-index: 3;
+
 
 }
 .intro::before{
@@ -123,8 +125,6 @@ main{
   
   }
   .card{
-    /* width: 100%; */
-    /* max-width: 260px; */
     height: 270px;
     background-color: var(--clr1);
     position: relative;
@@ -140,13 +140,11 @@ main{
   }
   .pro{
     width: 100%;
-    /* overflow: hidden; */
     height: 70%;
     background-color: #ccc;
     position: relative;
   }
   .card a .pro img{
-    /* max-width: 260px; */
     width: 100%;
     min-width: 140px;
     max-height: 240px; 
@@ -165,7 +163,6 @@ main{
   }
   .pro{
     width: 100%;
-    /* overflow: hidden; */
     height: 70%;
     background-color: #ccc;
     position: relative;
