--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ body{
 /* main */
 main{
     margin-top: 2rem;
-    max-height: 100vh;
+    min-height: 100vh;
   }
   .main-grid{
     width: 65%;
