--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ body{
     min-height: 100vh;
     font-family: cairo;
 }
+.pagecount{
+    display: none;
+    z-index: -1;
+}
 .top-nav{
     width: 100%;
     text-align: center;
