--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ footer{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: var(--bg-clr);
+    background-color: var(--sh5);
 }
 .contact ul li a{
     font-size: 1.5rem;
